--- a/ActivationWindow.xib
+++ b/ActivationWindow.xib
@@ -1,26 +1,21 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7531" systemVersion="14D136" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="7531"/>
     </dependencies>
     <objects>
-        <customObject id="-2" userLabel="File's Owner" customClass="NSViewController">
+        <customObject id="-2" userLabel="File's Owner" customClass="ActivationViewController">
             <connections>
+                <outlet property="RegistrationDescription" destination="xEa-FB-flr" id="92l-En-AmB"/>
+                <outlet property="activateButton" destination="oDg-Wi-8oe" id="SXc-xs-rNF"/>
+                <outlet property="activationStatus" destination="Dhr-q2-oU5" id="7IB-q5-hzh"/>
+                <outlet property="activationWindow" destination="QvC-M9-y7g" id="gk9-HP-boM"/>
+                <outlet property="demoButton" destination="hbQ-9R-R9l" id="dX2-r1-zVg"/>
+                <outlet property="userEmail" destination="u29-hT-Lku" id="Uf1-9U-IU8"/>
+                <outlet property="userKey" destination="MJw-Q0-oF1" id="sjp-xZ-s39"/>
+                <outlet property="userName" destination="luT-Gh-r6L" id="5TR-DK-vSP"/>
                 <outlet property="view" destination="EiT-Mj-1SZ" id="Zlh-Mc-erJ"/>
-            </connections>
-        </customObject>
-        <customObject id="z70-aD-slT" customClass="ActivationViewController">
-            <connections>
-                <outlet property="RegistrationDescription" destination="xEa-FB-flr" id="7sR-27-7nk"/>
-                <outlet property="activateButton" destination="oDg-Wi-8oe" id="m32-GM-Ogc"/>
-                <outlet property="activationStatus" destination="Dhr-q2-oU5" id="6cg-DH-QhF"/>
-                <outlet property="activationWindow" destination="QvC-M9-y7g" id="oxg-9c-rB1"/>
-                <outlet property="demoButton" destination="hbQ-9R-R9l" id="lQv-sE-pFO"/>
-                <outlet property="userEmail" destination="u29-hT-Lku" id="nG7-pE-yPm"/>
-                <outlet property="userKey" destination="MJw-Q0-oF1" id="eIX-rw-9WZ"/>
-                <outlet property="userName" destination="luT-Gh-r6L" id="eLj-ZS-r8Z"/>
-                <outlet property="view" destination="EiT-Mj-1SZ" id="zjm-oE-OxT"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
@@ -29,7 +24,7 @@
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="642" y="618" width="500" height="543"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="1920" height="1177"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
             <view key="contentView" identifier="ActivationView" canDrawConcurrently="YES" id="EiT-Mj-1SZ">
                 <rect key="frame" x="0.0" y="-4" width="500" height="543"/>
                 <autoresizingMask key="autoresizingMask"/>
@@ -66,7 +61,10 @@
                         </textFieldCell>
                     </textField>
                     <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="luT-Gh-r6L">
-                        <rect key="frame" x="19" y="280" width="461" height="22"/>
+                        <rect key="frame" x="20" y="280" width="460" height="22"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="460" id="y5x-WN-sYs"/>
+                        </constraints>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="24P-an-DMa">
                             <font key="font" metaFont="system"/>
                             <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
@@ -86,6 +84,9 @@
                     </textField>
                     <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="u29-hT-Lku">
                         <rect key="frame" x="20" y="225" width="460" height="22"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="460" id="zo0-r4-hJP"/>
+                        </constraints>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="jdq-lY-7gf">
                             <font key="font" metaFont="system"/>
                             <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
@@ -96,6 +97,7 @@
                         <rect key="frame" x="20" y="72" width="460" height="120"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="120" id="1AD-rB-rP2"/>
+                            <constraint firstAttribute="width" constant="460" id="c8N-aG-NlN"/>
                         </constraints>
                         <textFieldCell key="cell" lineBreakMode="charWrapping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="SJo-fb-fni">
                             <font key="font" metaFont="system"/>
@@ -143,11 +145,14 @@
                             <font key="font" metaFont="system"/>
                         </buttonCell>
                         <connections>
-                            <action selector="beginActivation:" target="z70-aD-slT" id="cdI-YA-UIB"/>
+                            <action selector="beginActivation:" target="-2" id="T4W-XM-0Bz"/>
                         </connections>
                     </button>
                     <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="hbQ-9R-R9l">
                         <rect key="frame" x="250" y="24" width="125" height="32"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="113" id="ieD-mt-Ydy"/>
+                        </constraints>
                         <buttonCell key="cell" type="push" title="Run As Demo" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Qbu-Yi-Bre">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
@@ -156,13 +161,13 @@ DQ
 </string>
                         </buttonCell>
                         <connections>
-                            <action selector="runAsDemo:" target="z70-aD-slT" id="Dek-O8-fFs"/>
+                            <action selector="runAsDemo:" target="-2" id="vE6-S6-LOp"/>
                         </connections>
                     </button>
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="Dhr-q2-oU5" secondAttribute="trailing" constant="57" id="1XR-Tv-Ufj"/>
-                    <constraint firstItem="vTF-7G-Cst" firstAttribute="leading" secondItem="luT-Gh-r6L" secondAttribute="leading" id="2Wu-qA-WhH"/>
+                    <constraint firstItem="vTF-7G-Cst" firstAttribute="leading" secondItem="luT-Gh-r6L" secondAttribute="leading" constant="-1" id="2Wu-qA-WhH"/>
                     <constraint firstItem="xEa-FB-flr" firstAttribute="top" secondItem="EdR-Jk-9ul" secondAttribute="bottom" constant="8" symbolic="YES" id="5ht-Gv-pRu"/>
                     <constraint firstItem="u29-hT-Lku" firstAttribute="leading" secondItem="fS8-Ud-dBJ" secondAttribute="leading" id="5jh-oP-3BY"/>
                     <constraint firstItem="xEa-FB-flr" firstAttribute="trailing" secondItem="EdR-Jk-9ul" secondAttribute="trailing" id="5k5-HO-Kkb"/>
