--- a/SetupWindow.xib
+++ b/SetupWindow.xib
@@ -8,7 +8,10 @@
         <customObject id="-2" userLabel="File's Owner" customClass="MainViewController">
             <connections>
                 <outlet property="bitDepthTIFF" destination="a5n-rz-Mc0" id="5h0-uK-TJD"/>
+                <outlet property="cancelEventsWarning" destination="vAa-Qk-23t" id="aaM-k7-yIB"/>
                 <outlet property="captureLabel" destination="Ems-op-Vx2" id="fER-1e-3EY"/>
+                <outlet property="disableEventsWarning" destination="PKa-yr-Mdh" id="ldU-eC-SQS"/>
+                <outlet property="eventsWindow" destination="8Xj-gf-tog" id="1oP-vm-e1k"/>
                 <outlet property="groupingDescription" destination="SNQ-gO-AdW" id="VeM-bR-R62"/>
                 <outlet property="groupingMenu" destination="fMf-38-47i" id="vhP-Ce-jrs"/>
                 <outlet property="jpegDisableSharpening" destination="uxb-mU-jLD" id="XHM-V4-bEJ"/>
@@ -65,10 +68,10 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <window title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" animationBehavior="default" id="QvC-M9-y7g">
+        <window identifier="mainWindow" title="C1Pros Image Processor" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" animationBehavior="default" id="QvC-M9-y7g">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <rect key="contentRect" x="196" y="240" width="500" height="718"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="1920" height="1177"/>
             <value key="minSize" type="size" width="500" height="718"/>
             <value key="maxSize" type="size" width="500" height="718"/>
             <view key="contentView" identifier="mainView" id="EiT-Mj-1SZ">
@@ -975,8 +978,68 @@ Example: "Image01 - Variant 1.jpg" instead of "Image01 1.jpg"</string>
             </view>
             <point key="canvasLocation" x="414" y="364"/>
         </window>
+        <window identifier="eventsWarning" title="Disable Events Log" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" animationBehavior="default" id="8Xj-gf-tog">
+            <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES"/>
+            <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
+            <rect key="contentRect" x="196" y="240" width="480" height="429"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="1920" height="1177"/>
+            <view key="contentView" id="FWk-ag-4HL">
+                <rect key="frame" x="0.0" y="7" width="480" height="429"/>
+                <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fEr-qE-luc">
+                        <rect key="frame" x="20" y="196" width="440" height="213"/>
+                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="Events Log" id="SxG-gI-bXJ"/>
+                    </imageView>
+                    <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="NwJ-fV-cTK">
+                        <rect key="frame" x="23" y="83" width="444" height="93"/>
+                        <textFieldCell key="cell" controlSize="mini" sendsActionOnEndEditing="YES" id="8Pp-J3-Vh5">
+                            <font key="font" metaFont="system"/>
+                            <string key="title">You have chosen to resize one of your output formats. We strongly recommend disabling the Events Panel before continuing.   To do so, in Capture One click on the Window Menu &gt; Events Log and verify the checkbox for Show Panel for Events is unchecked.</string>
+                            <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                        </textFieldCell>
+                    </textField>
+                    <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GRE-oU-pX2">
+                        <rect key="frame" x="133" y="13" width="112" height="32"/>
+                        <buttonCell key="cell" type="push" title="OK" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="7Z5-0c-edg">
+                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                            <font key="font" metaFont="system"/>
+                            <string key="keyEquivalent" base64-UTF8="YES">
+DQ
+</string>
+                        </buttonCell>
+                        <connections>
+                            <action selector="continueOn:" target="-2" id="JvU-ny-nAy"/>
+                        </connections>
+                    </button>
+                    <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vAa-Qk-23t">
+                        <rect key="frame" x="245" y="13" width="112" height="32"/>
+                        <buttonCell key="cell" type="push" title="Cancel" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="6cM-Oi-FFi">
+                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                            <font key="font" metaFont="system"/>
+                            <string key="keyEquivalent" base64-UTF8="YES">
+Gw
+</string>
+                        </buttonCell>
+                        <connections>
+                            <action selector="cancelEventsWarning:" target="-2" id="NtY-Cb-Xf9"/>
+                        </connections>
+                    </button>
+                    <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="PKa-yr-Mdh">
+                        <rect key="frame" x="144" y="59" width="202" height="18"/>
+                        <buttonCell key="cell" type="check" title="Got it. Don't show this again." bezelStyle="regularSquare" imagePosition="left" inset="2" id="adt-qV-hy9">
+                            <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
+                            <font key="font" metaFont="system"/>
+                        </buttonCell>
+                    </button>
+                </subviews>
+            </view>
+            <point key="canvasLocation" x="1011" y="-35.5"/>
+        </window>
     </objects>
     <resources>
+        <image name="Events Log" width="541" height="262"/>
         <image name="IP Banner White" width="500" height="146"/>
     </resources>
 </document>
