--- a/ActivationWindow.xib
+++ b/ActivationWindow.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7531" systemVersion="14D136" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="7531"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="7702"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="ActivationViewController">
@@ -126,9 +126,13 @@
                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
                     </textField>
-                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Dhr-q2-oU5">
-                        <rect key="frame" x="135" y="354" width="310" height="17"/>
-                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Demo" id="lkI-W5-uja">
+                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Dhr-q2-oU5">
+                        <rect key="frame" x="135" y="334" width="347" height="37"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="343" id="1jr-N9-ICZ"/>
+                            <constraint firstAttribute="height" constant="37" id="XiC-TH-R96"/>
+                        </constraints>
+                        <textFieldCell key="cell" sendsActionOnEndEditing="YES" title="Demo" id="lkI-W5-uja">
                             <font key="font" metaFont="systemBold"/>
                             <color key="textColor" red="0.88235294119999996" green="0.5568627451" blue="0.035294117649999998" alpha="1" colorSpace="calibratedRGB"/>
                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
@@ -165,7 +169,7 @@ DQ
                     </button>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="Dhr-q2-oU5" secondAttribute="trailing" constant="57" id="1XR-Tv-Ufj"/>
+                    <constraint firstAttribute="trailing" secondItem="Dhr-q2-oU5" secondAttribute="trailing" constant="20" id="1XR-Tv-Ufj"/>
                     <constraint firstItem="vTF-7G-Cst" firstAttribute="leading" secondItem="luT-Gh-r6L" secondAttribute="leading" constant="-1" id="2Wu-qA-WhH"/>
                     <constraint firstItem="xEa-FB-flr" firstAttribute="top" secondItem="EdR-Jk-9ul" secondAttribute="bottom" constant="8" symbolic="YES" id="5ht-Gv-pRu"/>
                     <constraint firstItem="u29-hT-Lku" firstAttribute="leading" secondItem="fS8-Ud-dBJ" secondAttribute="leading" id="5jh-oP-3BY"/>
@@ -182,7 +186,7 @@ DQ
                     <constraint firstItem="u29-hT-Lku" firstAttribute="top" secondItem="fS8-Ud-dBJ" secondAttribute="bottom" constant="8" symbolic="YES" id="SM2-fA-SFV"/>
                     <constraint firstItem="7bt-cf-xcG" firstAttribute="leading" secondItem="fS8-Ud-dBJ" secondAttribute="leading" id="UGx-BJ-GUh"/>
                     <constraint firstItem="Rlg-uL-YXC" firstAttribute="top" secondItem="u29-hT-Lku" secondAttribute="bottom" constant="8" symbolic="YES" id="ZZ0-Oc-pN2"/>
-                    <constraint firstItem="7bt-cf-xcG" firstAttribute="baseline" secondItem="Dhr-q2-oU5" secondAttribute="baseline" id="ZlA-uj-wts"/>
+                    <constraint firstItem="7bt-cf-xcG" firstAttribute="baseline" secondItem="Dhr-q2-oU5" secondAttribute="baseline" constant="-20" id="ZlA-uj-wts"/>
                     <constraint firstItem="EdR-Jk-9ul" firstAttribute="leading" secondItem="EiT-Mj-1SZ" secondAttribute="leading" constant="20" symbolic="YES" id="avH-de-aqM"/>
                     <constraint firstItem="7bt-cf-xcG" firstAttribute="top" secondItem="xEa-FB-flr" secondAttribute="bottom" constant="17" id="bfb-rX-2IB"/>
                     <constraint firstItem="oDg-Wi-8oe" firstAttribute="leading" secondItem="EiT-Mj-1SZ" secondAttribute="leading" constant="131" id="cqi-34-jIn"/>
